[package]
name = "rust-adventure"
version = "0.1.0"
authors = ["Jason George <jasongeorge21@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.65"
crossterm = "0.13.3"
#num-traits = "0.2.9"
#num-derive = "0.3.0"
lexical = "^4.0"
textwrap = { version = "0.11", features = ["term_size"] }