[package]
name = "rust-adventure"
version = "0.1.0"
authors = ["Jason George <jasongeorge21@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.67"
crossterm = "0.16.0"
num-traits = "0.2.11"
num-derive = "0.3.0"
lexical = "5.2.0"
textwrap = { version = "0.11", features = ["term_size"] }
inventory = "^0.1.5"
traitcast_core = "^0.2.0"
traitcast = "^0.5.0"
rand = "^0.7.3"
rand_distr = "^0.2.2"